--- a/app/src/main/res/layout/fragment_verify_identity_new.xml
+++ b/app/src/main/res/layout/fragment_verify_identity_new.xml
@@ -33,11 +33,7 @@
             android:textSize="@dimen/textSize13sp"
             android:textStyle="bold" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:background="@color/color_191919_EEEFF0" />
+
         <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/status_type"
             android:layout_width="match_parent"
@@ -54,8 +50,8 @@
         android:background="@drawable/bg_square_shape_4dp_white"
         android:orientation="vertical"
         android:paddingHorizontal="10dp"
-        android:paddingBottom="20dp"
         android:paddingTop="10dp"
+        android:paddingBottom="20dp"
         app:layout_constraintTop_toBottomOf="@id/ll_select_credential">
 
         <TextView
@@ -151,11 +147,11 @@
             android:id="@+id/btn_take_photo"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:layout_weight="1"
             android:layout_marginTop="20dp"
-            android:background="@drawable/bg_radius_20_button_dusk"
-            android:minWidth="0dp"
             android:layout_marginRight="@dimen/margin_6"
+            android:layout_weight="1"
+            android:background="@drawable/ic_submit"
+            android:minWidth="0dp"
             android:minHeight="0dp"
             android:paddingTop="9dp"
             android:paddingBottom="9dp"
@@ -165,28 +161,27 @@
             android:textSize="@dimen/textSize16sp"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/ll_description" />
-<!--        <Button-->
-<!--            android:id="@+id/btnGallery"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="44dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:background="@drawable/bg_radius_20_button_dusk"-->
-<!--            android:letterSpacing="0.2"-->
-<!--            android:minWidth="0dp"-->
-<!--            android:layout_marginLeft="@dimen/margin_6"-->
-<!--            android:minHeight="0dp"-->
-<!--            android:paddingTop="9dp"-->
-<!--            android:paddingBottom="9dp"-->
-<!--            android:text="@string/take_id_gallery"-->
-<!--            android:textAllCaps="true"-->
-<!--            android:textColor="@color/color_191919_FCFCFC"-->
-<!--            android:textSize="@dimen/textSize16sp"-->
-<!--            android:textStyle="bold"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/ll_description" />-->
+        <!--        <Button-->
+        <!--            android:id="@+id/btnGallery"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="44dp"-->
+        <!--            android:layout_weight="1"-->
+        <!--            android:layout_marginTop="20dp"-->
+        <!--            android:background="@drawable/bg_radius_20_button_dusk"-->
+        <!--            android:letterSpacing="0.2"-->
+        <!--            android:minWidth="0dp"-->
+        <!--            android:layout_marginLeft="@dimen/margin_6"-->
+        <!--            android:minHeight="0dp"-->
+        <!--            android:paddingTop="9dp"-->
+        <!--            android:paddingBottom="9dp"-->
+        <!--            android:text="@string/take_id_gallery"-->
+        <!--            android:textAllCaps="true"-->
+        <!--            android:textColor="@color/color_191919_FCFCFC"-->
+        <!--            android:textSize="@dimen/textSize16sp"-->
+        <!--            android:textStyle="bold"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/ll_description" />-->
 
     </LinearLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
