--- a/app/src/main/res/drawable/effect_select_date_frame_5dp.xml
+++ b/app/src/main/res/drawable/effect_select_date_frame_5dp.xml
@@ -3,13 +3,13 @@
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
-            <solid android:color="@color/color_191919_FCFCFC" />
+            <solid android:color="#DDE1F4" />
         </shape>
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
-            <solid android:color="@color/color_317FFF_0760D4" />
+            <solid android:color="@color/color_025BE8" />
         </shape>
     </item>
 </selector>
