存款记录样式修改

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -78,6 +78,7 @@
     <declare-styleable name="StatusBottomSheetStyle">
         <attr name="sheetLayout" format="reference" />
         <attr name="defaultStatusText" format="string" />
+        <attr name="textColor" format="reference|color" />
         <attr name="defaultBottomSheetTitleText" format="string" />
         <attr name="bottomSheetShowCloseButton" format="boolean" />
         <attr name="arrowAtEnd" format="boolean" />
