--- a/app/src/main/res/layout/content_verify_identity_kyc.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc.xml
@@ -4,99 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_F0F5FA"
+
     android:paddingBottom="14dp">
 
-    <ImageView
-        android:id="@+id/img_ic_kyc"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/ic_id_card_kyc"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:text="@string/kyc_valid"
-        android:textColor="@color/color_BBBBBB_333333"
-        android:textSize="@dimen/textSize14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/img_ic_kyc"
-        app:layout_constraintStart_toEndOf="@+id/img_ic_kyc"
-        app:layout_constraintTop_toTopOf="@+id/img_ic_kyc"
-        tools:text="有效证件" />
-
-    <TextView
-        android:id="@+id/txv_title_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/kyc_type"
-        android:textColor="@color/color_BBBBBB_333333"
-        android:textSize="@dimen/textSize14sp"
-        app:layout_constraintStart_toStartOf="@+id/img_ic_kyc"
-        app:layout_constraintTop_toBottomOf="@+id/img_ic_kyc"
-        tools:text="证件类型" />
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/cl_type"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="18dp"
-        android:background="@drawable/bg_radius_4_edittext_unfocus"
+        android:layout_marginTop="1dp"
+        android:background="@color/exo_white"
         android:orientation="horizontal"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/txv_title_type"
-        app:layout_constraintTop_toBottomOf="@+id/txv_title_type">
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints">
 
+        <TextView
+            android:id="@+id/number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_14"
+            android:layout_marginTop="15dp"
+            android:text="@string/kyc_num"
+            android:textColor="@color/color_BBBBBB_333333"
+            android:textSize="@dimen/textSize14sp"
+            tools:ignore="MissingConstraints"
+            tools:text="证件号码" />
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/margin_20"
+            android:src="@drawable/ic_recharge_copy_30_2" />
 
         <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/selector_type"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             app:defaultStatusText="请选择证件类型"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/number"
             app:layout_constraintTop_toTopOf="parent"
             app:textGravity="left|center_vertical" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/txv_title_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/kyc_num"
-        android:textColor="@color/color_BBBBBB_333333"
-        android:textSize="@dimen/textSize14sp"
-        app:layout_constraintStart_toStartOf="@+id/cl_type"
-        app:layout_constraintTop_toBottomOf="@+id/cl_type"
-        tools:text="证件号码" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/cl_num"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="18dp"
-        android:background="@drawable/bg_radius_4_edittext_unfocus"
+        android:layout_marginTop="1dp"
+        android:background="@color/exo_white"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/txv_title_num"
-        app:layout_constraintTop_toBottomOf="@+id/txv_title_num">
+        app:layout_constraintStart_toStartOf="@+id/cl_type"
+        app:layout_constraintTop_toBottomOf="@+id/cl_type">
+
+        <TextView
+            android:id="@+id/txv_title_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_14"
+            android:layout_marginTop="15dp"
+            android:textColor="@color/color_BBBBBB_333333"
+            android:textSize="@dimen/textSize14sp"
+            android:text="@string/kyc_num"
+            tools:text="证件号码" />
 
         <EditText
             android:id="@+id/ed_num"
@@ -116,147 +94,50 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:hint="请输入证件号码" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_etIdentityType"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/margin_50"
-        android:layout_marginTop="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/cl_num">
-
-
-        <RelativeLayout
-            android:id="@+id/etIdentityType"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/exo_white"
-            android:orientation="horizontal"
-            tools:ignore="MissingConstraints">
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:layout_marginStart="@dimen/margin_14"
-                android:text="@string/type_of_certificate"
-                android:textColor="@color/color_414655"
-                android:textSize="@dimen/textSize14sp" />
-
-            <ImageView
-                android:id="@+id/iv_recharge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/margin_20"
-                android:layout_toEndOf="@+id/tv_title"
-                android:src="@drawable/ic_recharge_copy_30_2" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/dp_4"
-                android:layout_toEndOf="@+id/iv_recharge"
-                android:text="@string/pls_file_type"
-                android:textColor="@color/color_C9CFD7"
-                android:textSize="@dimen/textSize14sp" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/margin_20"
-                android:src="@drawable/ic_arrow_gray" />
-        </RelativeLayout>
-
-
-        <View
-            android:id="@+id/identityTypeSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:clickable="true"
-            android:focusable="true"
-            app:layout_constraintBottom_toBottomOf="@id/etIdentityType"
-            app:layout_constraintTop_toTopOf="@id/etIdentityType" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/cl_pic"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_width="195dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="18dp"
-        android:background="@drawable/bg_radius_4_kyc_selected_frame"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cl_etIdentityType"
-        tools:background="@drawable/bg_radius_4_edittext_focus_ff9200">
-
-        <View
-            android:id="@+id/pic_frame"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/bg_radius_0_edittext_unfocus_dashgap"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cl_num">
 
         <ImageView
             android:id="@+id/img_pic"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/ic_id_card_demo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_icon_id01" />
 
         <LinearLayout
             android:id="@+id/btn_add_pic"
-            android:layout_width="54dp"
-            android:layout_height="26dp"
-            android:background="@drawable/bg_radius_2_button_2b87ff"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_rectangle_268"
             android:gravity="center"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_plus" />
+            app:layout_constraintEnd_toEndOf="@+id/cl_num"
+            app:layout_constraintTop_toBottomOf="@+id/cl_num">
 
             <TextView
+                android:id="@+id/tv_upload_id_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:text="@string/kyc_add"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="@string/click_upload_id_photo"
                 android:textColor="@color/home_card_text_color"
-                android:textSize="@dimen/textSize12sp"
-                android:textStyle="bold"
-                tools:text="添加" />
+                android:textSize="@dimen/textSize14sp" />
 
         </LinearLayout>
+    </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/img_tri"
@@ -298,5 +179,6 @@
         app:layout_constraintStart_toStartOf="@+id/tvUploadTip"
         app:layout_constraintTop_toBottomOf="@+id/tvUploadTip"
         tools:visibility="visible" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
