--- a/app/src/main/res/layout/content_verify_identity_kyc_service.xml
+++ b/app/src/main/res/layout/content_verify_identity_kyc_service.xml
@@ -11,14 +11,14 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:gravity="center"
-        android:text="@string/kyc_contact_service"
+        android:text="@string/customer_service_help"
         android:textColor="@color/color_BBBBBB_333333"
         android:textSize="@dimen/textSize12sp"
         android:maxLines="2"
         app:highlightColor="@color/transparent"
         app:highlightRadius="0dp"
         app:highlightText="@string/kyc_contact_service_hilight"
-        app:highlightTextColor="@color/color_FF9143"
+        app:highlightTextColor="@color/color_BBBBBB_333333"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
