--- a/app/src/main/res/layout/fragment_verify_status.xml
+++ b/app/src/main/res/layout/fragment_verify_status.xml
@@ -3,57 +3,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_191919_FCFCFC"
+    android:background="@color/color_F0F5FA"
     tools:context=".ui.profileCenter.identity.VerifyStatusFragment">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@color/color_000000_FCFCFC"
+        android:layout_marginStart="@dimen/margin_15"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="@dimen/margin_15"
+        android:background="@drawable/ic_bg"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/txv_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_20"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="@dimen/margin_15"
+            android:text="@string/kyc_verify_successful"
+            android:textColor="@color/color_414655"
+            android:textSize="@dimen/textSize18sp"
+            android:visibility="invisible"
+            tools:text="@string/kyc_you_wait"
+            tools:visibility="visible" />
+
 
         <ImageView
             android:id="@+id/img_status"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="20dp"
             android:background="@null"
             android:contentDescription="@null"
-            android:visibility="invisible"
-            tools:visibility="visible"
             android:src="@drawable/ic_done"
-            tools:src="@drawable/ic_waiting_time"/>
-
-        <TextView
-            android:id="@+id/txv_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize14sp"
             android:visibility="invisible"
-            tools:visibility="visible"
-            android:text="@string/kyc_verify_successful"
-            tools:text="@string/kyc_you_wait" />
+            tools:src="@drawable/ic_icon_timev_01"
+            tools:visibility="visible" />
 
 
         <Button
             android:id="@+id/btn_kyc_verify"
-            android:layout_width="124dp"
-            android:layout_height="34dp"
+            android:layout_width="200dp"
+            android:layout_height="42dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/bg_radius_4_gradient_fca635_ffddb1_ffb048"
-            android:drawableLeft="@drawable/ic__service_head"
+            android:background="@drawable/ic_button01"
             android:gravity="center"
             android:paddingHorizontal="20dp"
-            android:text="@string/live_chat"
             android:textColor="@color/home_card_text_color"
             android:textSize="@dimen/textSize14sp"
-            tools:text="@string/live_chat" />
+          />
 
         <include
             android:id="@+id/btn_service"
