--- a/app/src/main/res/layout/view_account_balance.xml
+++ b/app/src/main/res/layout/view_account_balance.xml
@@ -1,56 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/account_balance_view"
     android:layout_width="match_parent"
-    android:layout_height="44dp"
-    android:paddingStart="25dp"
+    android:layout_height="wrap_content"
     android:background="@color/color_191919_FCFCFC"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     tools:context=".ui.profileCenter.money_transfer.transfer.MoneyTransferSubFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/account_balance"
-        android:textStyle="bold"
-        android:textColor="@color/color_BBBBBB_333333"
-        android:textSize="@dimen/textSize14sp" />
+        android:layout_marginStart="@dimen/margin_10"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="@dimen/margin_10"
+        android:background="@drawable/ic_mask_group"
+        android:orientation="vertical"
+        android:paddingBottom="12dp">
 
-    <TextView
-        android:id="@+id/tv_currency_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:textColor="@color/color_317FFF_0760D4"
-        tools:text="PHP"
-        android:textSize="@dimen/textSize20sp" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="@dimen/margin_14">
 
-    <TextView
-        android:id="@+id/tv_balance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="@dimen/margin_12"
+                android:src="@drawable/ic_group_7130" />
 
-        android:layout_marginStart="8dp"
-        android:textColor="@color/color_317FFF_0760D4"
-        android:textSize="@dimen/textSize20sp"
-        android:textStyle="bold"
-        tools:text="87,547,000.000"
-        />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/now_balance"
+                android:textColor="@color/exo_white"
+                android:textSize="@dimen/textSize14sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="17dp"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/btn_refresh"
-        app:tint="@color/color_7F7F7F_999999"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="10dp"
-        android:scaleType="centerInside"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_profile_center_refresh"/>
+            <TextView
+                android:id="@+id/tv_currency_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/exo_white"
+                android:textSize="@dimen/textSize20sp"
+                tools:text="₱" />
+
+
+            <TextView
+                android:id="@+id/tv_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="0"
+                android:textColor="@color/exo_white"
+                android:textSize="@dimen/textSize20sp"
+                tools:text="19940.000" />
+
+            <ImageView
+                android:id="@+id/btn_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_icon_money_refresh03"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
 
 </LinearLayout>
 
