--- a/app/src/main/res/drawable/selector_bg_home_tab_menu.xml
+++ b/app/src/main/res/drawable/selector_bg_home_tab_menu.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false">
-        <shape android:shape="rectangle" android:useLevel="false" android:visible="true">
-            <solid android:color="@color/color_FFFFFF" />
+    <item android:state_checked="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/color_025BE8" />
             <corners android:radius="@dimen/margin_20" />
         </shape>
     </item>
-
-    <item android:state_checked="true">
-        <shape android:shape="rectangle" android:useLevel="false" android:visible="true">
+    <item android:state_selected="true">
+        <shape android:shape="rectangle">
             <solid android:color="@color/color_025BE8" />
+            <corners android:radius="@dimen/margin_20" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/color_FFFFFF" />
             <corners android:radius="@dimen/margin_20" />
         </shape>
     </item>
