--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -1,14 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.maintab.BetlistFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:adjustViewBounds="true"
+        android:src="@drawable/bg_collection_top" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
+        <View
+            android:id="@+id/v_statusbar"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
+
+        <LinearLayout
+            android:id="@+id/toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:paddingHorizontal="18dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_scrollFlags="scroll|enterAlways"
+            tools:ignore="SpUsage,RtlSymmetry,ContentDescription">
+
+            <ImageView
+                android:id="@+id/iv_menu_left"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@null"
+                android:scaleType="fitStart"
+                android:src="@drawable/icon_menu" />
+
+            <ImageView
+                android:id="@+id/iv_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginStart="@dimen/margin_10"
+                android:adjustViewBounds="true"
+                android:contentDescription="@null"
+                android:scaleType="fitStart"
+                android:src="@drawable/logo_okbet_color" />
+
+            <androidx.legacy.widget.Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+
+            <Button
+                android:id="@+id/btn_sport"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:minWidth="90dp"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:background="@drawable/selector_bg_home_tab_menu"
+                android:textColor="@color/selector_blue_white"
+                android:textSize="12sp"
+                android:text="@string/all_sport"
+                android:visibility="visible"
+                tools:visibility="visible" />
+        </LinearLayout>
+
+        <org.cxct.sportlottery.widget.RadiusCardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:rcv_topLeftRadiu="20dp"
+            app:rcv_topRightRadiu="20dp"
+            app:rcv_bottomLeftRadiu="0dp"
+            app:rcv_bottomRightRadiu="0dp"
+            app:cardBackgroundColor="@color/color_F3F9FF">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="@color/color_F3F9FF">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/favorite_game_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never"
+                    android:visibility="gone"
+                    tools:itemCount="1"
+                    tools:listitem="@layout/item_favorite"
+                    tools:visibility="visible" />
+
+                <include
+                    android:id="@+id/fl_no_game"
+                    layout="@layout/include_my_favorite_empty"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+        </org.cxct.sportlottery.widget.RadiusCardView>
+
+    </LinearLayout>
 </FrameLayout>
