--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -86,45 +86,50 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <RadioGroup
-        android:id="@+id/rg_type"
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_15"
-        android:layout_marginVertical="@dimen/margin_10"
-        android:orientation="horizontal">
+        android:layout_marginVertical="@dimen/margin_10">
 
-        <RadioButton
-            android:id="@+id/rbtn_sport"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:button="@null"
-            android:checked="true"
-            android:background="@drawable/selector_bg_home_tab_menu"
-            android:textColor="@color/selector_blue_white"
-            android:textSize="@dimen/textSize14sp"
-            android:text="@string/sport" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_type_list"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
 
-        <RadioButton
-            android:id="@+id/rbtn_egame"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="@dimen/margin_10"
-            android:gravity="center"
-            android:button="@null"
-            android:background="@drawable/selector_bg_home_tab_menu"
-            android:textColor="@color/selector_blue_white"
-            android:textSize="@dimen/textSize14sp"
-            android:text="@string/e_game" />
-    </RadioGroup>
+        <RadioGroup
+            android:id="@+id/rg_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <RadioButton
+                android:id="@+id/rbtn_sport"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:button="@null"
+                android:checked="true"
+                android:background="@drawable/selector_bg_home_tab_menu"
+                android:textColor="@color/selector_blue_white"
+                android:textSize="@dimen/textSize14sp"
+                android:text="@string/sport" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_type_list"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:layout_marginHorizontal="@dimen/margin_15" />
+            <RadioButton
+                android:id="@+id/rbtn_egame"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:gravity="center"
+                android:button="@null"
+                android:background="@drawable/selector_bg_home_tab_menu"
+                android:textColor="@color/selector_blue_white"
+                android:textSize="@dimen/textSize14sp"
+                android:text="@string/e_game" />
+        </RadioGroup>
+    </FrameLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
