--- a/app/src/main/res/layout/item_main_home_menu.xml
+++ b/app/src/main/res/layout/item_main_home_menu.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="160dp"
-    android:paddingRight="@dimen/margin_10"
+    android:layout_height="200dp"
     tools:ignore="ContentDescription, SpUsage">
 
     <ImageView
@@ -11,15 +10,15 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/card01_element01" />
+        android:src="@drawable/card_sport_football" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_gravity="center_vertical"
-        android:layout_marginHorizontal="20dp">
+        android:layout_gravity="bottom"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginBottom="25dp">
 
         <TextView
             android:id="@+id/tv_name"
@@ -33,12 +32,10 @@
             android:id="@+id/tv_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_4"
-            android:layout_marginBottom="9dp"
             android:textColor="@color/color_025BE8"
-            android:fontFamily="@font/helvetica_bold"
+            android:fontFamily="@font/helvetica"
             android:textStyle="bold"
-            android:textSize="32sp"
+            android:textSize="30sp"
             tools:text="2290" />
 
         <View
