--- a/app/src/main/res/layout/view_base_tool_bar_no_drawer.xml
+++ b/app/src/main/res/layout/view_base_tool_bar_no_drawer.xml
@@ -14,7 +14,7 @@
         android:layout_height="@dimen/tool_bar_height"
         android:gravity="center"
         android:letterSpacing="0.2"
-        android:textColor="@color/black"
+        android:textColor="@color/color_414655"
         android:textSize="@dimen/textSize16sp"
         tools:text="@string/title" />
 
