--- a/app/src/main/res/layout/content_type_eps_item.xml
+++ b/app/src/main/res/layout/content_type_eps_item.xml
@@ -21,7 +21,7 @@
     <org.cxct.sportlottery.ui.game.widget.OddsButtonDetail
         android:id="@+id/button_odds"
         android:layout_width="92dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
