--- a/app/src/main/res/layout/content_type_sco_item.xml
+++ b/app/src/main/res/layout/content_type_sco_item.xml
@@ -28,7 +28,7 @@
         <org.cxct.sportlottery.ui.game.widget.OddsButtonDetail
             android:id="@+id/button_odds_1st"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="1dp"
             app:layout_constraintEnd_toStartOf="@+id/button_odds_ant"
             app:layout_constraintStart_toEndOf="@id/tv_name"
