--- a/app/src/main/res/drawable/bg_radius_4_button_odds_lock.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_odds_lock.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <solid android:color="@color/color_F9F9F9" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/color_EDEDED" />
+    <solid android:color="@color/color_bbbbbb_ffffff" />
 </shape>
