--- a/app/src/main/res/layout/activity_detail_sport.xml
+++ b/app/src/main/res/layout/activity_detail_sport.xml
@@ -1,195 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="SpUsage">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
-    <data>
-
-        <variable
-            name="fragment"
-            type="org.cxct.sportlottery.ui.game.detail.SportDetailActivity" />
-
-        <variable
-            name="gameViewModel"
-            type="org.cxct.sportlottery.ui.game.GameViewModel" />
-    </data>
-
-    <FrameLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:elevation="0dp">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/cl_content"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collaps_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/color_141414_F3F4F5"
-            android:visibility="gone"
-            tools:visibility="visible"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:srlDragRate="0.3"
-            app:srlEnableLoadMore="true"
-            app:srlEnablePureScrollMode="true">
+            android:elevation="0dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+            app:statusBarScrim="@android:color/transparent"
+            app:titleEnabled="false">
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/app_bar_layout"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:elevation="0dp">
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.6"
+                android:orientation="vertical">
 
-                <com.google.android.material.appbar.CollapsingToolbarLayout
+                <include
+                    android:id="@+id/toolBar"
+                    layout="@layout/view_detail_head_toolbar" />
+
+                <org.cxct.sportlottery.ui.component.DetailLiveViewToolbar
+                    android:id="@+id/live_view_tool_bar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_scrollFlags="scroll">
+                    android:visibility="gone"
+                    tools:layout_height="220dp" />
+            </LinearLayout>
 
-                    <LinearLayout
+            <include
+                android:id="@+id/collaps_toolbar"
+                layout="@layout/view_toolbar_detail_collaps"
+                app:layout_collapseMode="pin"
+                android:visibility="visible" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/color_F0F5FA"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/color_191919_FCFCFC"
+                android:orientation="vertical">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp">
+
+                    <View
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/color_191919_FCFCFC"
-                        android:orientation="vertical">
+                        android:layout_height="1dp"
+                        android:background="@color/color_E3E8EE"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent" />
 
-                        <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-                            <include
-                                android:id="@+id/v_toolbar"
-                                layout="@layout/view_detail_head_toolbar"
-                                app:fragment="@{fragment}"
-                                app:gameViewModel="@{gameViewModel}" />
+                    <TextView
+                        android:id="@+id/btn_odd"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="投注"
+                        android:textColor="@color/main_tab_text_selector"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="@+id/iv_center"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                            <org.cxct.sportlottery.ui.component.LiveViewToolbar
-                                android:id="@+id/liveViewToolBar"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                tools:layout_height="220dp" />
+                    <View
+                        android:id="@+id/viewBtOdd"
+                        android:layout_width="62dp"
+                        android:layout_height="2dp"
+                        android:background="@drawable/bg_radius_2_025be8"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="@+id/iv_center" />
 
-                        </FrameLayout>
+                    <ImageView
+                        android:id="@+id/iv_center"
+                        android:layout_width="1dp"
+                        android:layout_height="24dp"
+                        android:background="@color/color_E3E8EE"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                        <View
-                            android:id="@+id/v_divider"
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:background="@color/color_1F1F1F_e6e6e6"
-                            app:layout_constraintTop_toBottomOf="@+id/liveViewToolBar" />
+                    <TextView
+                        android:id="@+id/btn_analyze"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="赛事分析"
+                        android:textColor="@color/color_6C7BA8"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="@+id/iv_center"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp">
+                    <View
+                        android:id="@+id/viewBtnAnalyze"
+                        android:layout_width="62dp"
+                        android:layout_height="2dp"
+                        android:background="@drawable/bg_radius_2_025be8"
+                        android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="@+id/iv_center"
+                        app:layout_constraintRight_toRightOf="parent" />
 
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:background="@color/color_E3E8EE"
-                                app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                            <TextView
-                                android:id="@+id/btn_odd"
-                                android:layout_width="0dp"
-                                android:gravity="center"
-                                android:layout_height="match_parent"
-                                android:text="投注"
-                                android:textSize="14sp"
-                                android:textStyle="bold"
-                                android:textColor="@color/color_6C7BA8"
-                                app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintRight_toRightOf="@+id/iv_center"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                />
-                            
-                            <View
-                                android:id="@+id/viewBtOdd"
-                                android:layout_width="62dp"
-                                android:layout_height="2dp"
-                                app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintRight_toRightOf="@+id/iv_center"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                android:background="@drawable/bg_radius_2_025be8"
-                                />
+                <LinearLayout
+                    android:id="@+id/lin_categroy"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/margin_40">
 
-                            <ImageView
-                                android:id="@+id/iv_center"
-                                android:layout_width="1dp"
-                                android:layout_height="24dp"
-                                android:background="@color/color_E3E8EE"
-                                app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintRight_toRightOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_cat"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginHorizontal="@dimen/margin_10"
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/tab_odds_detail" />
 
-                            <TextView
-                                android:id="@+id/btn_analyze"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:gravity="center"
-                                android:text="赛事分析"
-                                android:textSize="14sp"
-                                android:textStyle="bold"
-                                android:textColor="@color/color_6C7BA8"
-                                app:layout_constraintLeft_toLeftOf="@+id/iv_center"
-                                app:layout_constraintRight_toRightOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                />
+                    <View
+                        android:layout_width="0.5dp"
+                        android:layout_height="match_parent"
+                        android:background="#F1F0F0" />
 
-                            <View
-                                android:id="@+id/viewBtnAnalyze"
-                                android:layout_width="62dp"
-                                android:layout_height="2dp"
-                                android:visibility="gone"
-                                app:layout_constraintLeft_toLeftOf="@+id/iv_center"
-                                app:layout_constraintRight_toRightOf="parent"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                android:background="@drawable/bg_radius_2_025be8" />
+                    <ImageView
+                        android:id="@+id/iv_arrow"
+                        android:layout_width="@dimen/margin_40"
+                        android:layout_height="match_parent"
+                        android:padding="@dimen/margin_10"
+                        android:src="@drawable/selector_arrow_blue_double" />
+                </LinearLayout>
+            </LinearLayout>
 
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rv_cat"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:background="@color/color_191919_FCFCFC"
-                            android:orientation="horizontal"
-                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                            tools:listitem="@layout/tab_odds_detail" />
-                    </LinearLayout>
-
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
-            </com.google.android.material.appbar.AppBarLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_detail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:nestedScrollingEnabled="false"
+                android:paddingTop="5dp"
+                tools:listitem="@layout/content_odds_detail_list_item" />
 
             <FrameLayout
-                android:id="@+id/linearLayout3"
+                android:id="@+id/frameBottom"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/color_F0F5FA"
-                android:orientation="vertical"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                android:layout_height="match_parent"
+                android:nestedScrollingEnabled="false"
+                android:visibility="gone" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_detail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
-                    android:clipChildren="false"
-                    android:overScrollMode="never"
-                    tools:listitem="@layout/content_odds_detail_list_item" />
-
-                <FrameLayout
-                    android:id="@+id/frameBottom"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone"/>
-
-            </FrameLayout>
-
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-        <include
-            android:id="@+id/v_loading"
-            layout="@layout/view_game_detail_loading" />
-
-    </FrameLayout>
-
-</layout>
