--- a/app/src/main/res/layout/button_odd_detail_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail_detail.xml
@@ -11,12 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:layout_gravity="center_vertical"
-        tools:ignore="SpUsage,ContentDescription">
+        android:background="@drawable/selector_button_radius_4_odds">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:paddingHorizontal="6dp"
-            android:background="@drawable/selector_button_radius_4_odds_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
@@ -30,7 +29,7 @@
                 android:fontFamily="@font/helvetica"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/selector_button_odd_top_text2"
+                android:textColor="@color/selector_button_odd_top_text"
                 android:textSize="@dimen/textSize14sp"
                 android:paddingRight="5dp"
                 tools:text="义大利义大利"
@@ -63,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/helvetica"
                 android:maxLines="1"
-                android:textColor="@color/selector_button_odd_top_text2"
+                android:textColor="@color/selector_button_odd_top_text"
                 android:textSize="@dimen/textSize13sp"
                 tools:text="-0.5/1"
                 tools:textColor="@color/color_A7B2C4"
@@ -130,8 +129,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/bg_radius_4_button_odds_lock"
-            android:scaleType="center"
-            android:src="@drawable/ic_iconlock"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_lock"
+            tools:visibility="gone"
             android:visibility="gone" />
 
         <TextView
