--- a/app/src/main/res/layout/content_odds_detail_list_item.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_item.xml
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/tv_game_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:textColor="@color/color_414655"
@@ -33,6 +33,7 @@
             android:textAllCaps="true"
             android:fontFamily="@font/helvetica"
             app:layout_constraintLeft_toRightOf="@+id/viewLeftLine"
+            app:layout_constraintRight_toLeftOf="@+id/odd_detail_pin"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="进球 : 大小" />
@@ -43,17 +44,16 @@
             android:layout_height="match_parent"
             app:tint="@color/color_C9CFD7"
             android:padding="5dp"
-            android:layout_marginEnd="13dp"
+            android:layout_marginEnd="5dp"
             android:src="@drawable/selector_item_country_league_pin_v4"
             app:layout_constraintRight_toLeftOf="@+id/odd_detail_fold"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/odd_detail_fold"
-            android:layout_width="21dp"
+            android:layout_width="22dp"
             android:layout_height="match_parent"
             android:padding="2dp"
-            android:rotation="180"
             app:tint="@color/color_C9CFD7"
             android:layout_marginEnd="7dp"
             android:src="@drawable/ic_arrow_down_double"
@@ -66,10 +66,10 @@
     <View
         android:id="@+id/view_line"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_D3DEF5"
+        android:layout_height="0.5dp"
+        android:background="@color/color_DFE8F2"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <View
         android:id="@+id/spaceTitle"
