修改:转换记录

--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -10,12 +10,14 @@
     tools:context=".ui.profileCenter.money_transfer.MoneyTransferActivity"
     tools:ignore="spUsage">
 
-    <org.cxct.sportlottery.ui.component.DateRangeSearchView
-        android:id="@+id/date_search_bar"
+
+    <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
+        android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_marginTop="@dimen/margin_5"
+        app:layout_constraintTop_toTopOf="parent"
+        app:minusDays="6" />
     <LinearLayout
         android:id="@+id/ll_status"
         android:layout_width="match_parent"
